PG3200: Rnemae the packages to match the name of the module.
This avoids creating phony target-folders

--- a/pg3200/exercises/AndroidManifest.xml
+++ b/pg3200/exercises/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.nith.pg3200.ovinger"
+    package="no.nith.pg3200.exercises"
     android:versionCode="1"
     android:versionName="1.0">
 
