--- a/pg3200/a01/AndroidManifest.xml
+++ b/pg3200/a01/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.nith.pg3200.innlevering1"
+    package="no.nith.pg3200.a01"
     android:versionCode="1"
     android:versionName="1.0">
 
