--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <android.api.version>18</android.api.version>
         <gson.version>2.2.4</gson.version>
         <tic-tac-toe.version>1.0-SNAPSHOT</tic-tac-toe.version>
+        <annotations.version>12.0</annotations.version>
 
         <!-- Maven-stuff -->
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
@@ -92,6 +93,11 @@
                 <groupId>no.nith</groupId>
                 <artifactId>tic-tac-toe</artifactId>
                 <version>${tic-tac-toe.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.intellij</groupId>
+                <artifactId>annotations</artifactId>
+                <version>${annotations.version}</version>
             </dependency>
 
             <dependency>
