--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
-        <hibernate-entitymanager.version>4.2.6.Final</hibernate-entitymanager.version>
+        <hibernate.version>4.2.6.Final</hibernate.version>
         <mysql-connector-java.version>5.1.26</mysql-connector-java.version>
         <junit.version>4.11</junit.version>
         <android.platform.version>4.3_r1</android.platform.version>
@@ -71,7 +71,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>${hibernate-entitymanager.version}</version>
+                <version>${hibernate.version}</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
