--- a/pg3200/a02/AndroidManifest.xml
+++ b/pg3200/a02/AndroidManifest.xml
@@ -7,12 +7,17 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:allowBackup="false">
         <activity
-            android:name=".Hei"
+            android:name=".Main"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
