--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
         <gson.version>2.2.4</gson.version>
         <tic-tac-toe.version>1.0-SNAPSHOT</tic-tac-toe.version>
         <annotations.version>12.0</annotations.version>
+        <commons-io.version>2.4</commons-io.version>
+        <maps.version>19_r1</maps.version>
+        <play-services.version>13</play-services.version>
+        <joda-time.version>2.1</joda-time.version>
 
         <!-- Maven-stuff -->
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
@@ -98,6 +102,28 @@
                 <groupId>com.intellij</groupId>
                 <artifactId>annotations</artifactId>
                 <version>${annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.android.maps</groupId>
+                <artifactId>maps</artifactId>
+                <version>${maps.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.android.gms</groupId>
+                <artifactId>google-play-services</artifactId>
+                <version>${play-services.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda-time.version}</version>
             </dependency>
 
             <dependency>
