--- a/pg3200/a02/pom.xml
+++ b/pg3200/a02/pom.xml
@@ -33,6 +33,11 @@
         <dependency>
             <groupId>com.google.android.gms</groupId>
             <artifactId>google-play-services</artifactId>
+            <type>apklib</type>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android.gms</groupId>
+            <artifactId>google-play-services</artifactId>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
