--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <mysql-connector-java.version>5.1.26</mysql-connector-java.version>
         <junit.version>4.11</junit.version>
         <android.platform.version>4.4_r1</android.platform.version>
-        <android.plugin.version>3.7.0</android.plugin.version>
+        <android.plugin.version>3.7.1-SNAPSHOT</android.plugin.version>
         <android.api.version>19</android.api.version>
         <gson.version>2.2.4</gson.version>
         <tic-tac-toe.version>1.0-SNAPSHOT</tic-tac-toe.version>
@@ -64,6 +64,18 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <!-- TODO: Remove-->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>oss.sonatype.org-jayway-snapshots</id>
+            <name>Jayway OpenSource SNAPSHOTs on Sonatype.org</name>
+            <url>http://oss.sonatype.org/content/repositories/jayway-snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
     <dependencyManagement>
         <dependencies>
@@ -118,7 +130,13 @@
                 <groupId>com.google.android.gms</groupId>
                 <artifactId>google-play-services</artifactId>
                 <version>${play-services.version}</version>
-                <scope>provided</scope>
+                <type>apklib</type>
+            </dependency>
+            <dependency>
+                <groupId>com.google.android.gms</groupId>
+                <artifactId>google-play-services</artifactId>
+                <version>${play-services.version}</version>
+                <type>jar</type>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
