--- a/pg5100/l07/pom.xml
+++ b/pg5100/l07/pom.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <artifactId>schoolstuff</artifactId>
+        <artifactId>pg5100</artifactId>
         <groupId>no.nith</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>pg5100</artifactId>
+    <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <name>PG5100</name>
 
+    <artifactId>l07</artifactId>
     <modules>
-        <module>l03</module>
-        <module>l04</module>
-        <module>l07</module>
+        <module>ejb</module>
+        <module>web</module>
+        <module>ear</module>
     </modules>
+
+
 </project>
