--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ local.properties
 # PDT-specific
 .buildpath
 
-
 #################
 ## Visual Studio
 #################
@@ -182,7 +181,6 @@ $RECYCLE.BIN/
 # Mac crap
 .DS_Store
 
-
 #############
 ## Python
 #############
@@ -214,8 +212,6 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 
-
-
 #############
 ## Custom
 #############
@@ -224,4 +220,4 @@ pip-log.txt
 target/
 gen-external-apklibs
 gen/
-
+out/
