--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,10 @@
         <maps.version>19_r1</maps.version>
         <play-services.version>13</play-services.version>
         <joda-time.version>2.3</joda-time.version>
-        <javaee-web-api.version>6.0</javaee-web-api.version>
-        <javaee-endorsed-api.version>6.0</javaee-endorsed-api.version>
+        <javaee-web-api.version>7.0</javaee-web-api.version>
+        <javaee-endorsed-api.version>7.0</javaee-endorsed-api.version>
+        <jsf.version>2.2</jsf.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
 
         <!-- Maven-stuff -->
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
@@ -140,6 +142,17 @@
                 <artifactId>javaee-web-api</artifactId>
                 <version>${javaee-web-api.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax.servlet-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.faces</groupId>
+                <artifactId>javax.faces-api</artifactId>
+                <version>${jsf.version}</version>
             </dependency>
 
             <dependency>
