--- a/pg5100/exam/task2/ejb/pom.xml
+++ b/pg5100/exam/task2/ejb/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
+            <artifactId>derbyclient</artifactId>
         </dependency>
     </dependencies>
 
