--- a/pg5100/exam/task2/web/src/main/webapp/WEB-INF/web.xml
+++ b/pg5100/exam/task2/web/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,6 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>hello.xhtml</welcome-file>
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
-
 </web-app>
